# sampkg

./: .gitignore  MANIFEST.in  README.md  entry_points.cfg  setup.cfg
sampkg/: __init__.py  hello.py
