[metadata]
name = sampkg
version = attr: sampkg.__version__
url = https://github.com/ryu1kup/pysampkg
author = Ryuichi Ueno
author_email = ryu1kup@gmail.com
lisence_file = LICENSE
description = sampkg: A test python package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
entry_points = file: entry_points.cfg
